--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ background: hsl(212, 45%, 89%);
     background: hsl(0, 0%, 100%);
     width: 275px;
     height: auto;
-    margin: auto ;
+    /* margin: auto ; */
     border-radius: 15px;
     padding: 15px;
     
@@ -35,14 +35,12 @@ background: hsl(212, 45%, 89%);
     text-align: center;
     color: hsl(218, 44%, 22%);
     font-family: 'Outfit', sans-serif;
-    font-weight: 600;
+    font-weight: 900;
 }
 .container p{
-    padding: 0px 5px 0px 5px;
+    padding: 0px 5px 15px 5px;
     color: hsl(220, 15%, 55%);
     Font-size: 16px;
     text-align: center;
     font-family: 'Outfit', sans-serif;
-    font-weight: 400;
-
 }
