--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ background: hsl(212, 45%, 89%);
     display: block;
     margin: auto;
     border-radius: 15px;
+    height: 300px;
 }
 .container h2{
     padding: 20px 5px 20px 5px;
