--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ background: hsl(212, 45%, 89%);
     display: block;
     margin: auto;
     border-radius: 15px;
-    /* height: 275px; */
+    height: 285px;
 }
 .container h2{
     padding: 20px 5px 20px 5px;
@@ -40,7 +40,7 @@ background: hsl(212, 45%, 89%);
     line-height: 1.4;
 }
 .container p{
-    padding: 0px 5px 30px 5px;
+    padding: 0px 5px 25px 5px;
     color: hsl(220, 15%, 55%);
     Font-size: 15px;
     text-align: center;
