--- a/index.css
+++ b/index.css
@@ -21,14 +21,14 @@ background: hsl(212, 45%, 89%);
     /* margin: auto ; */
     border-radius: 15px;
     padding: 15px;
-    
+    box-shadow: 0px 10px 20px 2px #0000003e;
 }
 .container img{
     width: 100%;
     display: block;
     margin: auto;
     border-radius: 15px;
-    height: 285px;
+    height: 290px;
 }
 .container h2{
     padding: 20px 5px 20px 5px;
